# Doit

./: .gitignore  CMakeLists.txt  SetEnhancedInstructionSets.cmake  cmake_auto.bat  cmake_vs2022.bat  make_auto.bat
Doit/: QDlgDebug.cpp  QDlgDebug.h  QDlgDebug.ui  QDlgDoit.cpp  QDlgDoit.h  QDlgDoit.qrc  QDlgDoit.ui  QtStreamBuffer.cpp  QtStreamBuffer.h  main.cpp
algo/: CEigens.cpp  CEigens.h  CFace.cpp  CFourierTransform.cpp  CFourierTransform.h  CImgHelper.cpp  CImgHelper.h
net/: CDealerRouter.cpp  CDealerRouter.h  CZmqHelper.cpp  CZmqHelper.h
pys/: dft.py  loger.py  numba-test.py  numba.py  package-scripts.py  sigmoid.py
scripts/: AddAdminPowerShellToContextMenu.reg  AddPowerShellToContextMenu.reg  CreateHotspot.bat  flushGithubDns.py
utils/: CFace.h  CTickCounter.cpp  CTickCounter.h  czip.cpp  czip.h
